# internal/controller/http/order.go
@@ -1,7 +1,7 @@
 package http
 
 import (
-	"github.com/demig00d/order-service/internal/controller/http/view"
+	"github.com/demig00d/order-service/internal/entity"
 	"github.com/demig00d/order-service/internal/usecase"
 	"github.com/demig00d/order-service/pkg/logger"
 
@@ -21,23 +21,23 @@ type orderRoutes struct {
 // @Tags  	    order
 // @Accept      json
 // @Produce     json
-// @Success     200 {object} view.OrderView
+// @Success     200 {object} entity.Order
 // @Router      /order/:id [get]
 func (r *orderRoutes) getById(c *gin.Context) {
 	orderId := c.Param("id")
-	order, err := r.uc.GetById(c.Request.Context(), orderId)
+	orderDto, err := r.uc.GetById(c.Request.Context(), orderId)
 	if err != nil {
 		c.HTML(http.StatusNotFound, "notfound_order.html", nil)
 		return
 	}
 
-	var orderView view.OrderView
-	err = json.Unmarshal(order.OrderInfo, &orderView)
+	var order entity.Order
+	err = json.Unmarshal(orderDto.OrderInfo, &order)
 
 	if err != nil {
 		r.l.Error(err, "http - v1 - order")
 		c.HTML(http.StatusInternalServerError, "invalid_data.html", nil)
 		return
 	}
-	c.HTML(http.StatusOK, "index.html", orderView)
+	c.HTML(http.StatusOK, "index.html", order)
 }
